--- a/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
+++ b/angular-web-app/src/app/components/_admin/page-not-found/page-not-found.component.html
@@ -2,7 +2,7 @@
   <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [modal]="content">
   </app-section-title>
 
-  <mat-accordion>
+  <mat-accordion class="admin-accordion">
     <!-- Header -->
     <mat-expansion-panel [expanded]="panelStep === 0" (opened)="setStep(0)">
       <mat-expansion-panel-header class="title-header">
