--- a/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
@@ -1,7 +1,8 @@
-<div class="container-fluid" *ngIf="content">
+<div class="container-fluid p-0" *ngIf="content">
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="mat-elevation-z4">
+        <h4 class="title-underlined">Resultaat</h4>
         <div *ngIf="content.active">
           <app-section-title [title]="content.title" [subTitle]="content.subTitle" [text]="content.text">
           </app-section-title>
@@ -28,84 +29,91 @@
 
   <div class="row mb-4">
     <div class="col-12">
+      <mat-card class="mat-elevation-z4">
+        <form (ngSubmit)="onSubmit()" #contactFormForm="ngForm">
 
-      <form (ngSubmit)="onSubmit()" #contactFormForm="ngForm">
-
-        <div class="form-group row">
-          <div class="col-sm-12 col-md-10 d-flex align-items-center">
-            <h4 class="title-underlined">Details</h4>
+          <div class="form-group row">
+            <div class="col-sm-12 col-md-10 d-flex align-items-center">
+              <h4 class="title-underlined">Instellingen</h4>
+            </div>
+            <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
+              <button mat-mini-fab type="button"
+                (click)="content.active = !content.active; content.active ? contactFormForm.form.enable() : contactFormForm.form.disable(); contactFormForm.form.markAsTouched()"
+                [color]="content.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+                [attr.aria-pressed]="content.active">
+                <mat-icon>{{content.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+              </button>
+            </div>
           </div>
-          <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
-            <button mat-mini-fab type="button"
-              (click)="content.active = !content.active; content.active ? contactFormForm.form.enable() : contactFormForm.form.disable(); contactFormForm.form.markAsTouched()"
-              [color]="content.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
-              [attr.aria-pressed]="content.active">
-              <mat-icon>{{content.active ? 'visibility' : 'visibility_off'}}</mat-icon>
-            </button>
+
+          <div class="form-group row">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+              <mat-label>Content titel</mat-label>
+              <input matInput type="text" id="contactFormContentTitle" placeholder="Titel"
+                name="contactFormContentTitle" [(ngModel)]="content.title" #contactFormContentTitleInput="ngModel"
+                required>
+              <mat-hint [hidden]="contactFormContentTitleInput.valid || contactFormContentTitleInput.pristine">
+                Titel is verplicht
+              </mat-hint>
+            </mat-form-field>
+
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+              <mat-label>Content subtitel</mat-label>
+              <input matInput type="text" id="contactFormContentSubTitle" placeholder="Subtitel"
+                name="contactFormContentSubTitle" [(ngModel)]="content.subTitle"
+                #contactFormContentSubTitleInput="ngModel" required>
+              <mat-hint [hidden]="contactFormContentSubTitleInput.valid || contactFormContentSubTitleInput.pristine">
+                Subtitel is verplicht
+              </mat-hint>
+            </mat-form-field>
+
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
+              <mat-label>Content text</mat-label>
+              <textarea rows="1" matInput type="text" id="contactFormContentText" placeholder="Text"
+                name="contactFormContentText" [(ngModel)]="content.text" #contactFormContentTextInput="ngModel"
+                required> </textarea>
+              <mat-hint [hidden]="contactFormContentTextInput.valid || contactFormContentTextInput.pristine">
+                Text is verplicht
+              </mat-hint>
+            </mat-form-field>
+
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+              <mat-label>Form style</mat-label>
+              <mat-select id="contactFormContentFormStyle" name="contactFormContentFormStyle"
+                [(ngModel)]="content.formStyle" #contactFormContentFormStyleInput="ngModel" required>
+                <mat-option *ngFor="let style of formStyles" [value]="style">
+                  {{ style }}
+                </mat-option>
+              </mat-select>
+              <mat-hint [hidden]="contactFormContentFormStyleInput.valid || contactFormContentFormStyleInput.pristine ">
+                Form style is verplicht
+              </mat-hint>
+            </mat-form-field>
+
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+              <mat-label>Form kleur</mat-label>
+              <mat-select id="contactFormContentFormColor" name="contactFormContentFormColor"
+                [(ngModel)]="content.formColor" #contactFormContentFormColorInput="ngModel" required>
+                <mat-option value="primary">Primary</mat-option>
+                <mat-option value="accent">Accent</mat-option>
+                <mat-option value="warn">Warn</mat-option>
+              </mat-select>
+              <mat-hint [hidden]="contactFormContentFormColorInput.valid || contactFormContentFormColorInput.pristine ">
+                Form kleur is verplicht
+              </mat-hint>
+            </mat-form-field>
           </div>
-        </div>
 
-        <div class="form-group row">
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
-            <mat-label>Content titel</mat-label>
-            <input matInput type="text" id="contactFormContentTitle" placeholder="Titel" name="contactFormContentTitle"
-              [(ngModel)]="content.title" #contactFormContentTitleInput="ngModel" required>
-            <mat-hint [hidden]="contactFormContentTitleInput.valid || contactFormContentTitleInput.pristine">
-              Titel is verplicht
-            </mat-hint>
-          </mat-form-field>
-
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
-            <mat-label>Content subtitel</mat-label>
-            <input matInput type="text" id="contactFormContentSubTitle" placeholder="Subtitel"
-              name="contactFormContentSubTitle" [(ngModel)]="content.subTitle"
-              #contactFormContentSubTitleInput="ngModel" required>
-            <mat-hint [hidden]="contactFormContentSubTitleInput.valid || contactFormContentSubTitleInput.pristine">
-              Subtitel is verplicht
-            </mat-hint>
-          </mat-form-field>
-
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
-            <mat-label>Content text</mat-label>
-            <textarea rows="1" matInput type="text" id="contactFormContentText" placeholder="Text"
-              name="contactFormContentText" [(ngModel)]="content.text" #contactFormContentTextInput="ngModel"
-              required> </textarea>
-            <mat-hint [hidden]="contactFormContentTextInput.valid || contactFormContentTextInput.pristine">
-              Text is verplicht
-            </mat-hint>
-          </mat-form-field>
-
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
-            <mat-label>Form style</mat-label>
-            <mat-select id="contactFormContentFormStyle" name="contactFormContentFormStyle"
-              [(ngModel)]="content.formStyle" #contactFormContentFormStyleInput="ngModel" required>
-              <mat-option *ngFor="let style of formStyles" [value]="style">
-                {{ style }}
-              </mat-option>
-            </mat-select>
-            <mat-hint [hidden]="contactFormContentFormStyleInput.valid || contactFormContentFormStyleInput.pristine ">
-              Form style is verplicht
-            </mat-hint>
-          </mat-form-field>
-
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
-            <mat-label>Form kleur</mat-label>
-            <mat-select id="contactFormContentFormColor" name="contactFormContentFormColor"
-              [(ngModel)]="content.formColor" #contactFormContentFormColorInput="ngModel" required>
-              <mat-option value="primary">Primary</mat-option>
-              <mat-option value="accent">Accent</mat-option>
-              <mat-option value="warn">Warn</mat-option>
-            </mat-select>
-            <mat-hint [hidden]="contactFormContentFormColorInput.valid || contactFormContentFormColorInput.pristine ">
-              Form kleur is verplicht
-            </mat-hint>
-          </mat-form-field>
-        </div>
-
-        <button mat-flat-button color="accent" type="submit" [disabled]="!contactFormForm.form.touched">Opslaan</button>
-        <button mat-flat-button color="primary" type="button" class="ml-3"
-          (click)="resetForm(); contactFormForm.form.markAsUntouched();content.active ? contactFormForm.form.enable() : contactFormForm.form.disable();">Reset</button>
-      </form>
+          <button mat-flat-button color="accent" type="submit"
+            [disabled]="!contactFormForm.form.valid || contactFormForm.form.pristine">
+            Opslaan
+          </button>
+          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="contactFormForm.form.pristine"
+            (click)="resetForm()">
+            Reset
+          </button>
+        </form>
+      </mat-card>
 
     </div>
   </div>
