--- a/angular-web-app/src/app/components/_admin/comp-header/comp-header.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-header/comp-header.component.html
@@ -1,30 +1,34 @@
-<div class="container-fluid" *ngIf="pageTitle">
+<div class="container-fluid p-0" *ngIf="pageTitle">
   <div class="row mb-4">
     <div class="col-12">
-      <app-header [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [image]="pageTitle.image" [elevation]="'mat-elevation-z8'"></app-header>
+      <mat-card class="mat-elevation-z4">
+        <h4 class="title-underlined">Resultaat</h4>
+        <app-header [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [image]="pageTitle.image"
+          [elevation]="'mat-elevation-z8'"></app-header>
+      </mat-card>
     </div>
   </div>
 
   <div class="row mb-4">
     <div class="col-12">
-
-        <h4 class="title-underlined">Details</h4>
+      <mat-card class="mat-elevation-z4">
+        <h4 class="title-underlined">Instellingen</h4>
         <form (ngSubmit)="onSubmit()" #headerForm="ngForm">
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Titel</mat-label>
               <input matInput type="text" id="defaultTitle" placeholder="Titel" name="defaultTitle"
                 [(ngModel)]="pageTitle.title" #title="ngModel" required>
               <mat-hint [hidden]="title.valid || title.pristine">Titel is verplicht</mat-hint>
             </mat-form-field>
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
               <mat-label>Subtitel</mat-label>
               <input matInput type="text" id="defaultSubTitle" placeholder="Subtitel" name="defaultSubTitle"
                 [(ngModel)]="pageTitle.subTitle" #subTitle="ngModel" required>
               <mat-hint [hidden]="subTitle.valid || subTitle.pristine">Subtitel is verplicht</mat-hint>
             </mat-form-field>
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
               <mat-label>Afbeelding</mat-label>
               <input matInput type="text" id="defaultImage" placeholder="Afbeelding" name="defaultImage"
                 [(ngModel)]="pageTitle.image">
@@ -33,11 +37,16 @@
           </div>
 
           <button mat-flat-button color="accent" type="submit"
-            [disabled]="!headerForm.form.valid || headerForm.form.pristine">Opslaan</button>
-          <button mat-flat-button color="primary" type="button" class="ml-3" (click)="reset()">Reset</button>
+            [disabled]="!headerForm.form.valid || headerForm.form.pristine">
+            Opslaan
+          </button>
+          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="headerForm.form.pristine"
+            (click)="resetForm()">
+            Reset
+          </button>
         </form>
 
-
+      </mat-card>
     </div>
   </div>
 </div>
