--- a/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
@@ -1,7 +1,8 @@
-<div class="container-fluid" *ngIf="latestNews">
+<div class="container-fluid p-0" *ngIf="latestNews">
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="mat-elevation-z4">
+        <h4 class="title-underlined">Resultaat</h4>
         <div *ngIf="latestNews.active" class="container-fluid">
           <app-section-title [title]="latestNews.title" [subTitle]="latestNews.subTitle" [text]="latestNews.text"
             [link]="latestNews.link">
@@ -24,69 +25,76 @@
 
   <div class="row mb-4">
     <div class="col-12">
+      <mat-card class="mat-elevation-z4">
 
-      <form (ngSubmit)="onSubmit()" #latestNewsForm="ngForm">
 
-        <div class="form-group row">
-          <div class="col-sm-12 col-md-10 d-flex align-items-center">
-            <h4 class="title-underlined">Instellingen</h4>
+        <form (ngSubmit)="onSubmit()" #latestNewsForm="ngForm">
+
+          <div class="form-group row">
+            <div class="col-sm-12 col-md-10 d-flex align-items-center">
+              <h4 class="title-underlined">Instellingen</h4>
+            </div>
+            <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
+              <button mat-mini-fab type="button"
+                (click)="latestNews.active = !latestNews.active; latestNews.active ? latestNewsForm.form.enable() : latestNewsForm.form.disable(); latestNewsForm.form.markAsTouched()"
+                [color]="latestNews.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+                [attr.aria-pressed]="latestNews.active">
+                <mat-icon>{{latestNews.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+              </button>
+            </div>
           </div>
-          <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
-            <button mat-mini-fab type="button"
-              (click)="latestNews.active = !latestNews.active; latestNews.active ? latestNewsForm.form.enable() : latestNewsForm.form.disable(); latestNewsForm.form.markAsTouched()"
-              [color]="latestNews.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
-              [attr.aria-pressed]="latestNews.active">
-              <mat-icon>{{latestNews.active ? 'visibility' : 'visibility_off'}}</mat-icon>
-            </button>
+
+          <div class="form-group row">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+              <mat-label>Content titel</mat-label>
+              <input matInput type="text" id="latestNewsContentTitle" placeholder="Titel" name="latestNewsContentTitle"
+                [(ngModel)]="latestNews.title" #latestNewsContentTitleInput="ngModel" required>
+              <mat-hint [hidden]="latestNewsContentTitleInput.valid || latestNewsContentTitleInput.pristine">Titel is
+                verplicht</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+              <mat-label>Content subtitel</mat-label>
+              <input matInput type="text" id="latestNewsContentSubTitle" placeholder="Subtitel"
+                name="latestNewsContentSubTitle" [(ngModel)]="latestNews.subTitle"
+                #latestNewsContentSubTitleInput="ngModel" required>
+              <mat-hint [hidden]="latestNewsContentSubTitleInput.valid || latestNewsContentSubTitleInput.pristine">
+                Subtitel is verplicht
+              </mat-hint>
+            </mat-form-field>
+
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-10">
+              <mat-label>Content text</mat-label>
+              <textarea rows="1" matInput type="text" id="latestNewsContentText" placeholder="Text"
+                name="latestNewsContentText" [(ngModel)]="latestNews.text" #latestNewsContentTextInput="ngModel"
+                required> </textarea>
+              <mat-hint [hidden]="latestNewsContentTextInput.valid || latestNewsContentTextInput.pristine">Text is
+                verplicht
+              </mat-hint>
+            </mat-form-field>
+
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-2">
+              <mat-label>Items</mat-label>
+              <input matInput type="number" id="latestNewsContentAmount" name="latestNewsContentAmount" min="1" max="6"
+                [(ngModel)]="latestNews.amount" #latestNewsContentAmountInput="ngModel" required>
+              <mat-hint [hidden]="latestNewsContentAmountInput.valid || latestNewsContentAmountInput.pristine">Aantal is
+                verplicht
+              </mat-hint>
+            </mat-form-field>
+
           </div>
-        </div>
-
-        <div class="form-group row">
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
-            <mat-label>Content titel</mat-label>
-            <input matInput type="text" id="latestNewsContentTitle" placeholder="Titel" name="latestNewsContentTitle"
-              [(ngModel)]="latestNews.title" #latestNewsContentTitleInput="ngModel" required>
-            <mat-hint [hidden]="latestNewsContentTitleInput.valid || latestNewsContentTitleInput.pristine">Titel is
-              verplicht</mat-hint>
-          </mat-form-field>
-
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
-            <mat-label>Content subtitel</mat-label>
-            <input matInput type="text" id="latestNewsContentSubTitle" placeholder="Subtitel"
-              name="latestNewsContentSubTitle" [(ngModel)]="latestNews.subTitle"
-              #latestNewsContentSubTitleInput="ngModel" required>
-            <mat-hint [hidden]="latestNewsContentSubTitleInput.valid || latestNewsContentSubTitleInput.pristine">
-              Subtitel is verplicht
-            </mat-hint>
-          </mat-form-field>
-
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-10">
-            <mat-label>Content text</mat-label>
-            <textarea rows="1" matInput type="text" id="latestNewsContentText" placeholder="Text"
-              name="latestNewsContentText" [(ngModel)]="latestNews.text" #latestNewsContentTextInput="ngModel"
-              required> </textarea>
-            <mat-hint [hidden]="latestNewsContentTextInput.valid || latestNewsContentTextInput.pristine">Text is
-              verplicht
-            </mat-hint>
-          </mat-form-field>
-
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-2">
-            <mat-label>Items</mat-label>
-            <input matInput type="number" id="latestNewsContentAmount" name="latestNewsContentAmount" min="1" max="6"
-              [(ngModel)]="latestNews.amount" #latestNewsContentAmountInput="ngModel" required>
-            <mat-hint [hidden]="latestNewsContentAmountInput.valid || latestNewsContentAmountInput.pristine">Aantal is
-              verplicht
-            </mat-hint>
-          </mat-form-field>
-
-        </div>
 
 
-        <button mat-flat-button color="accent" type="submit" [disabled]="!latestNewsForm.form.touched">Opslaan</button>
-        <button mat-flat-button color="primary" type="button" class="ml-3"
-          (click)="reset(); latestNewsForm.form.markAsUntouched();latestNews.active ? latestNewsForm.form.enable() : latestNewsForm.form.disable();">Reset</button>
-      </form>
-
+          <button mat-flat-button color="accent" type="submit"
+            [disabled]="!latestNewsForm.form.valid || latestNewsForm.form.pristine">
+            Opslaan
+          </button>
+          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="latestNewsForm.form.pristine"
+            (click)="resetForm()">
+            Reset
+          </button>
+        </form>
+      </mat-card>
     </div>
   </div>
 
