--- a/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
@@ -1,7 +1,8 @@
-<div class="container-fluid" *ngIf="latestWork">
+<div class="container-fluid p-0" *ngIf="latestWork">
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="mat-elevation-z4">
+        <h4 class="title-underlined">Resultaat</h4>
         <div *ngIf="latestWork.active" class="container-fluid">
           <app-section-title [title]="latestWork.title" [subTitle]="latestWork.subTitle" [text]="latestWork.text"
             [link]="latestWork.link">
@@ -24,67 +25,72 @@
 
   <div class="row mb-4">
     <div class="col-12">
-      <form (ngSubmit)="onSubmit()" #latestWorkForm="ngForm">
+      <mat-card class="mat-elevation-z4">
 
-        <div class="form-group row">
-          <div class="col-sm-12 col-md-10 d-flex align-items-center">
-            <h4 class="title-underlined">Instellingen</h4>
+        <form (ngSubmit)="onSubmit()" #latestWorkForm="ngForm">
+          <div class="form-group row">
+            <div class="col-sm-12 col-md-10 d-flex align-items-center">
+              <h4 class="title-underlined">Instellingen</h4>
+            </div>
+            <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
+              <button mat-mini-fab type="button"
+                (click)="latestWork.active = !latestWork.active; latestWork.active ? latestWorkForm.form.enable() : latestWorkForm.form.disable(); latestWorkForm.form.markAsTouched()"
+                [color]="latestWork.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
+                [attr.aria-pressed]="latestWork.active">
+                <mat-icon>{{latestWork.active ? 'visibility' : 'visibility_off'}}</mat-icon>
+              </button>
+            </div>
           </div>
-          <div class="col-sm-12 col-md-2 d-flex align-items-start justify-content-end">
-            <button mat-mini-fab type="button"
-              (click)="latestWork.active = !latestWork.active; latestWork.active ? latestWorkForm.form.enable() : latestWorkForm.form.disable(); latestWorkForm.form.markAsTouched()"
-              [color]="latestWork.active ? 'accent' : 'primary'" [attr.aria-label]="'Hide component'"
-              [attr.aria-pressed]="latestWork.active">
-              <mat-icon>{{latestWork.active ? 'visibility' : 'visibility_off'}}</mat-icon>
-            </button>
+
+          <div class="form-group row">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+              <mat-label>Content titel</mat-label>
+              <input matInput type="text" id="latestWorkContentTitle" placeholder="Titel" name="latestWorkContentTitle"
+                [(ngModel)]="latestWork.title" #latestWorkContentTitleInput="ngModel" required>
+              <mat-hint [hidden]="latestWorkContentTitleInput.valid || latestWorkContentTitleInput.pristine">Titel is
+                verplicht</mat-hint>
+            </mat-form-field>
+
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-6">
+              <mat-label>Content subtitel</mat-label>
+              <input matInput type="text" id="latestWorkContentSubTitle" placeholder="Subtitel"
+                name="latestWorkContentSubTitle" [(ngModel)]="latestWork.subTitle"
+                #latestWorkContentSubTitleInput="ngModel" required>
+              <mat-hint [hidden]="latestWorkContentSubTitleInput.valid || latestWorkContentSubTitleInput.pristine">
+                Subtitel is verplicht
+              </mat-hint>
+            </mat-form-field>
+
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-10">
+              <mat-label>Content text</mat-label>
+              <textarea rows="1" matInput type="text" id="latestWorkContentText" placeholder="Text"
+                name="latestWorkContentText" [(ngModel)]="latestWork.text" #latestWorkContentTextInput="ngModel"
+                required> </textarea>
+              <mat-hint [hidden]="latestWorkContentTextInput.valid || latestWorkC.pristine">Text is verplicht
+              </mat-hint>
+            </mat-form-field>
+
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-2">
+              <mat-label>Items</mat-label>
+              <input matInput type="number" id="latestWorkContentAmount" name="latestWorkContentAmount" min="1" max="6"
+                [(ngModel)]="latestWork.amount" #latestWorkContentAmountInput="ngModel" required>
+              <mat-hint [hidden]="latestWorkContentAmountInput.valid || latestWorkContentAmountInput.pristine">Aantal is
+                verplicht
+              </mat-hint>
+            </mat-form-field>
           </div>
-        </div>
 
-        <div class="form-group row">
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
-            <mat-label>Content titel</mat-label>
-            <input matInput type="text" id="latestWorkContentTitle" placeholder="Titel" name="latestWorkContentTitle"
-              [(ngModel)]="latestWork.title" #latestWorkContentTitleInput="ngModel" required>
-            <mat-hint [hidden]="latestWorkContentTitleInput.valid || latestWorkContentTitleInput.pristine">Titel is
-              verplicht</mat-hint>
-          </mat-form-field>
+          <button mat-flat-button color="accent" type="submit"
+            [disabled]="!latestWorkForm.form.valid || latestWorkForm.form.pristine">
+            Opslaan
+          </button>
+          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="latestWorkForm.form.pristine"
+            (click)="resetForm()">
+            Reset
+          </button>
+        </form>
 
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-6">
-            <mat-label>Content subtitel</mat-label>
-            <input matInput type="text" id="latestWorkContentSubTitle" placeholder="Subtitel"
-              name="latestWorkContentSubTitle" [(ngModel)]="latestWork.subTitle"
-              #latestWorkContentSubTitleInput="ngModel" required>
-            <mat-hint [hidden]="latestWorkContentSubTitleInput.valid || latestWorkContentSubTitleInput.pristine">
-              Subtitel is verplicht
-            </mat-hint>
-          </mat-form-field>
-
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-10">
-            <mat-label>Content text</mat-label>
-            <textarea rows="1" matInput type="text" id="latestWorkContentText" placeholder="Text"
-              name="latestWorkContentText" [(ngModel)]="latestWork.text" #latestWorkContentTextInput="ngModel"
-              required> </textarea>
-            <mat-hint [hidden]="latestWorkContentTextInput.valid || latestWorkC.pristine">Text is verplicht
-            </mat-hint>
-          </mat-form-field>
-
-          <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-2">
-            <mat-label>Items</mat-label>
-            <input matInput type="number" id="latestWorkContentAmount" name="latestWorkContentAmount" min="1" max="6"
-              [(ngModel)]="latestWork.amount" #latestWorkContentAmountInput="ngModel" required>
-            <mat-hint [hidden]="latestWorkContentAmountInput.valid || latestWorkContentAmountInput.pristine">Aantal is
-              verplicht
-            </mat-hint>
-          </mat-form-field>
-
-        </div>
-
-
-        <button mat-flat-button color="accent" type="submit" [disabled]="!latestWorkForm.form.touched">Opslaan</button>
-        <button mat-flat-button color="primary" type="button" class="ml-3"
-          (click)="resetForm(); latestWorkForm.form.markAsUntouched();latestWork.active ? latestWorkForm.form.enable() : latestWorkForm.form.disable();">Reset</button>
-      </form>
-
+      </mat-card>
     </div>
   </div>
 
