--- a/angular-web-app/src/app/components/_admin/layout-footer/layout-footer.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-footer/layout-footer.component.html
@@ -4,18 +4,17 @@
 
   <div class="row mb-4">
     <div class="col-12">
-      <!-- <mat-card class="mat-elevation-z4">
+      <mat-card class="mat-elevation-z4">
         <h4 class="title-underlined">Resultaat</h4>
         <app-footer [footerContent]="footerContent" [fixed]="false" [elevated]="true"></app-footer>
-      </mat-card> -->
-      <app-footer [footerContent]="footerContent" [fixed]="false" [elevated]="true"></app-footer>
+      </mat-card>
     </div>
   </div>
 
   <div class="row mb-5">
     <div class="col-12">
       <mat-card class="mat-elevation-z4">
-        <h4 class="title-underlined">Details</h4>
+        <h4 class="title-underlined">Instellingen</h4>
         <form (ngSubmit)="onSubmit()" #footerForm="ngForm">
           <div class="form-group row">
             <div class="col-sm-12 col-md-6">
@@ -91,7 +90,8 @@
             [disabled]="!footerForm.form.valid || footerForm.form.pristine">
             Opslaan
           </button>
-          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="footerForm.form.pristine" (click)="resetForm()">
+          <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="footerForm.form.pristine"
+            (click)="resetForm()">
             Reset
           </button>
         </form>
