--- a/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-navigation/layout-navigation.component.html
@@ -4,23 +4,22 @@
 
   <div class="row mb-4">
     <div class="col-12">
-      <!-- <mat-card class="mat-elevation-z4">
+      <mat-card class="mat-elevation-z4">
         <h4 class="title-underlined">Resultaat</h4>
         <app-nav [navContent]="navContent" [fixed]="false" class="navbar-scrolled"></app-nav>
-      </mat-card> -->
-      <app-nav [navContent]="navContent" [fixed]="false" class="navbar-scrolled"></app-nav>
+      </mat-card>
     </div>
   </div>
 
   <div class="row mb-5">
     <div class="col-12">
       <mat-card class="mat-elevation-z4">
-        <h4 class="title-underlined">Details</h4>
+        <h4 class="title-underlined">Instellingen</h4>
 
         <form (ngSubmit)="onSubmit()" #navigationForm="ngForm">
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
               <mat-label>Titel</mat-label>
               <input matInput type="text" id="title" placeholder="Titel" name="title" [(ngModel)]="navContent.brandName"
                 #navTitle="ngModel" required>
@@ -29,7 +28,7 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-12">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-12">
               <mat-label>Logo</mat-label>
               <input matInput type="text" id="logo" placeholder="Logo" name="logo" [(ngModel)]="navContent.brandImage"
                 #navLogo="ngModel" required>
@@ -38,12 +37,12 @@
           </div>
 
           <div class="form-group row" *ngFor="let navlink of navContent.navLinks; index as i">
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-5">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-5">
               <mat-label>Label</mat-label>
               <input matInput [(ngModel)]="navlink.label" type="text" [id]="navlink.label" [name]="navlink.label"
                 placeholder="Label" required>
             </mat-form-field>
-            <mat-form-field [appearance]="formStyle" [color]="formColor"  class="form-field col-sm-12 col-md-5">
+            <mat-form-field [appearance]="formStyle" [color]="formColor" class="form-field col-sm-12 col-md-5">
               <mat-label>Router link</mat-label>
               <input matInput [(ngModel)]="navlink.routerLink" type="text" [id]="navlink.routerLink"
                 [name]="navlink.routerLink" placeholder="Router link" required>
@@ -58,9 +57,13 @@
           </div>
 
           <button mat-flat-button color="accent" type="submit"
-            [disabled]="!navigationForm.form.valid || navigationForm.form.pristine">Opslaan</button>
+            [disabled]="!navigationForm.form.valid || navigationForm.form.pristine">
+            Opslaan
+          </button>
           <button mat-flat-button color="primary" type="button" class="ml-3" [disabled]="navigationForm.form.pristine"
-            (click)="resetForm()">Reset</button>
+            (click)="resetForm()">
+            Reset
+          </button>
         </form>
       </mat-card>
     </div>
