--- a/angular-web-app/src/app/components/_admin/page-home/page-home.component.html
+++ b/angular-web-app/src/app/components/_admin/page-home/page-home.component.html
@@ -3,7 +3,7 @@
   </app-section-title>
 
 
-  <mat-accordion>
+  <mat-accordion class="admin-accordion">
     <!-- Header -->
     <mat-expansion-panel [expanded]="panelStep === 0" (opened)="setStep(0)">
       <mat-expansion-panel-header class="title-header">
