--- a/angular-web-app/src/app/components/_admin/page-portfolio/page-portfolio.component.html
+++ b/angular-web-app/src/app/components/_admin/page-portfolio/page-portfolio.component.html
@@ -17,7 +17,7 @@
     </div>
   </div> -->
 
-  <mat-accordion>
+  <mat-accordion class="admin-accordion">
 
     <!-- Header -->
     <mat-expansion-panel [expanded]="panelStep === 0" (opened)="setStep(0)">
