--- a/angular-web-app/src/app/components/section-title/section-title.component.html
+++ b/angular-web-app/src/app/components/section-title/section-title.component.html
@@ -7,7 +7,7 @@
   </div>
   <div *ngIf="link" class="col-md-4 d-flex align-items-center justify-content-end">
     <a mat-mini-fab color="accent" aria-label="Read more" href="{{link}}">
-      <mat-icon *ngIf="!linkIcon">read_more</mat-icon>
+      <mat-icon *ngIf="!linkIcon">more_horiz</mat-icon>
       <mat-icon *ngIf="linkIcon">{{linkIcon}}</mat-icon>
     </a>
   </div>
