added user add form

--- a/angular-web-app/src/app/components/_admin/toolbar/toolbar.component.html
+++ b/angular-web-app/src/app/components/_admin/toolbar/toolbar.component.html
@@ -9,20 +9,16 @@
   <span class="spacer"></span>
 
 
-  <button mat-button *ngIf="user" [matMenuTriggerFor]="profileMenu">
+  <button mat-button *ngIf="authService.userState as user" [matMenuTriggerFor]="profileMenu">
     <img *ngIf="user.photoURL" [src]="user.photoURL" class="img-fluid img-thumbnail rounded-circle mr-2">
     {{user.email}}
   </button>
 
   <mat-menu #profileMenu="matMenu" xPosition="before">
-    <button mat-menu-item>
+    <button mat-menu-item (click)="logout()">
       <mat-icon class="material-icons-two-tone">remove_circle</mat-icon>
-      <span (click)="logout()">Logout</span>
+      <span>Logout</span>
     </button>
   </mat-menu>
-
-  <button mat-button>
-    <span (click)="logout()">Logout</span>
-  </button>
 
 </mat-toolbar>
